@@ -22,7 +22,7 @@ public class UtilidadesF1 {
      * @return
      */
     public static List<Piloto> getPilotosPorMarcaEscuderia(List<Piloto> pilotos, Marca marca){
-        return pilotos.stream().filter(p->p.getEscuderia().getMarca().equals(marca)).collect(Collectors.toList());
+        return pilotos.stream().filter(p->p.getEscuderia().getMarca().equals(marca)).toList();
     }
 
 
@@ -46,14 +46,11 @@ public class UtilidadesF1 {
      * @return
      */
     public static List<Coche> topMejoresCoches(List<Coche> coches, Double minimoPuntuacionRequerida){
+        Double puntuacion = 0D;
+        Comparator<Coche> comparator = Comparator.comparing(c->c.getVelocidadPunta() + c.getAceleracion() - c.getProbabilidadAveria() - c.getProbabilidadAveria());
 
-        Comparator<Coche> comparator = Comparator.comparing(c-> c.getVelocidadPunta() + c.getAceleracion() -c.getProbabilidadAveria() -c.getTiempoMedioParadaBoxes());
-
-        return coches
-                .stream()
-                .filter(c-> (c.getAceleracion()+ c.getVelocidadPunta() - c.getProbabilidadAveria() -c.getTiempoMedioParadaBoxes()) >minimoPuntuacionRequerida)
-                .sorted(comparator.reversed())
-                .collect(Collectors.toList());
+        return coches.stream().filter(c->(c.getVelocidadPunta() + c.getAceleracion() - c.getProbabilidadAveria() - c.getProbabilidadAveria())> minimoPuntuacionRequerida)
+                .sorted(comparator.reversed()).toList();
     }
 
 
@@ -70,12 +67,10 @@ public class UtilidadesF1 {
      * @return
      */
     public static Double porcentajeVictoriaPiloto(Piloto piloto){
-        return piloto.getEscuderia().getPuntosRanking() +
-                piloto.getPuntosRanking() +
-                piloto.getEscuderia().getCoche().getAceleracion() +
-                piloto.getEscuderia().getCoche().getVelocidadPunta() -
-                piloto.getEscuderia().getCoche().getTiempoMedioParadaBoxes() -
-                piloto.getEscuderia().getCoche().getProbabilidadAveria();
+        Double puntuacionTotal = piloto.getEscuderia().getCoche().getVelocidadPunta() + piloto.getEscuderia().getCoche().getAceleracion() -  piloto.getEscuderia().getCoche().getProbabilidadAveria() -  piloto.getEscuderia().getCoche().getTiempoMedioParadaBoxes();
+
+        return puntuacionTotal + piloto.getPuntosRanking() + piloto.getEscuderia().getPuntosRanking();
+
     }
 
 
@@ -85,7 +80,13 @@ public class UtilidadesF1 {
      *
      */
      public static Piloto getMejorPiloto(Piloto piloto1, Piloto piloto2){
-        return porcentajeVictoriaPiloto(piloto1) > porcentajeVictoriaPiloto(piloto2) ? piloto1 : piloto2;
+
+         Double puntuacion1 = UtilidadesF1.porcentajeVictoriaPiloto(piloto1);
+         Double puntuacion2 = UtilidadesF1.porcentajeVictoriaPiloto(piloto2);
+
+         if(puntuacion1>puntuacion2){
+             return piloto1;
+         }else return piloto2;
     }
 
 
@@ -100,13 +101,7 @@ public class UtilidadesF1 {
      * @return
      */
     public static Map<Integer,Escuderia> getRankigPorEscuderias(List<RankingEscuderias> rankingEscuderias, Integer temporada){
-        Map<Integer, Escuderia>  mapa = new HashMap<>();
-        rankingEscuderias
-                .stream()
-                .filter(r->r.getTemporada().equals(temporada))
-                .findFirst()
-                .ifPresent(p->p.getEscuderias().forEach(e-> mapa.put(e.getPosicionEnRanking(),e)));
-        return mapa;
+        return rankingEscuderias.stream().filter(r->r.getTemporada().equals(temporada)).flatMap(e->e.getEscuderias().stream()).collect(Collectors.toMap(Escuderia::getPosicionEnRanking,e->e));
     }
 
 
@@ -118,26 +113,31 @@ public class UtilidadesF1 {
      * @param carreras
      * @return
      */
-    public static Map<Piloto, Double> totalPuntuacion(List<Carrera> carreras){
+    public static Map<Piloto, Double> totalPuntuacion(List<Carrera> carreras) {
 
         Map<Piloto, Double> mapaFinal = new HashMap<>();
 
         for(Carrera c : carreras){
-
-            for(Integer i : c.getPosiciones().keySet()){
-
+            for(Integer i :c.getPosiciones().keySet()){
                 if(mapaFinal.containsKey(c.getPosiciones().get(i))){
-                    mapaFinal.replace(c.getPosiciones().get(i), mapaFinal.get(c.getPosiciones().get(i))+ c.getPuntosPorPosicion().get(i));
+                    mapaFinal.put(c.getPosiciones().get(i),mapaFinal.get(c.getPosiciones().get(i))+c.getPuntosPorPosicion().get(i));
                 }else{
                     mapaFinal.put(c.getPosiciones().get(i),c.getPuntosPorPosicion().get(i));
                 }
-
             }
-
-
         }
 
         return mapaFinal;
+
+
+//        carreras.forEach(c->c.getPosiciones().forEach((k, v)->{
+//            if(mapaFinal.containsKey(v)){
+//                mapaFinal.put(v,mapaFinal.get(v)+c.getPuntosPorPosicion().get(k));
+//            }else{
+//                mapaFinal.put(v,c.getPuntosPorPosicion().get(k));
+//            }
+//        }));
+//        return mapaFinal;
     }
 
 }
